Fixed footet but main text is overlapping

--- a/public/stylesheet/styles.css
+++ b/public/stylesheet/styles.css
@@ -59,6 +59,11 @@ header{
 footer{
   padding:18px 0;
   background-color:#0054a2;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
+
 }
 
 .maintext{
@@ -187,4 +192,31 @@ footer{
 
 body, .label{
   font-family: 'Arial', sans-serif;
+}
+
+/* Loading screen css */
+#loading-screen {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.9);
+  display: flex; /* Change from 'none' to 'flex' */
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+/* Loader animation */
+.loader {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #3498db;
+  border-top: 5px solid transparent;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
